Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70494

Server buffer example no longer works on modern Linuxes

XMLWordPrintable

    • Linux/Wayland
    • 582af70640e411d8f423f1bc0528d5a5fce08e3a (qt/qtwayland/5.12)

      The drm-egl-server plugin uses an insecure mechanism which seems to be blocked when running Wayland on newer Linux versions.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tvete Paul Olav Tvete
            tvete Paul Olav Tvete
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes